--- a/plugin/index.html
+++ b/plugin/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <title>Related Videos with the Playback API</title>
   <!-- styles for the overlay plugin -->
-	<link href="//players.brightcove.net/videojs-overlay/1/videojs-overlay.css" rel="stylesheet">
+	<link href="https://players.brightcove.net/videojs-overlay/1/videojs-overlay.css" rel="stylesheet">
   <!-- styles for your custom player -->
   <link href="related-videos.css" rel="stylesheet">
 </head>
 
 <body>
   <!-- player embed code with an id attribute -->
-  <video id="myPlayerID"
+  <video-js id="myPlayerID"
     data-video-id="5604123528001"
   	data-account="1752604059001"
   	data-player="default"
@@ -21,11 +21,11 @@
   	class="video-js"
   	controls
   	width="640"
-  	height="360"></video>
-  <script src="//players.brightcove.net/1752604059001/default_default/index.min.js"></script>
+  	height="360"></video-js>
+  <script src="https://players.brightcove.net/1752604059001/default_default/index.min.js"></script>
 
   <!-- styles for the overlay plugin -->
-  <script src="//players.brightcove.net/videojs-overlay/1/videojs-overlay.min.js"></script>
+  <script src="https://players.brightcove.net/videojs-overlay/1/videojs-overlay.min.js"></script>
 
   <!-- your custom script -->
   <script type="text/javascript" src="related-videos.js"></script>
